TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/001-declaration-order.min
print 1;
var a: int;

